--- a/requirements.txt
+++ b/requirements.txt
@@ -55,3 +55,16 @@ xlwt==1.3.*
 xlrd==1.1.0; python_version < '3.8'
 xlrd==1.2.0; python_version >= '3.8'
 pypiwin32 ; sys_platform == 'win32'
+
+psycopg2~=2.8.5
+Jinja2~=2.11.2
+lxml~=4.6.3
+Pillow~=8.1.1
+xlrd~=1.2.0
+reportlab~=3.5.55
+gevent~=20.9.0
+freezegun~=0.3.15
+urllib3~=1.24.3
+cryptography~=35.0.0
+paypalrestsdk~=1.13.1
+setuptools~=56.0.0
